# tsea28-computer

./: .gitignore  Cargo.toml
src/: app.rs  computer.rs  main.rs  types.rs
src/app/: computer.rs  functionality.rs  render.rs  rendering.rs  update.rs  widget.rs
src/app/computer/: address_reg.rs  alu.rs  component.rs  data.rs  flags.rs  instruction.rs  micro_instruction.rs
src/app/computer/component/: list16.rs  list25.rs  list7.rs  value16.rs  value5.rs  value7.rs  value8.rs
src/computer/: alu.rs  program_instruction.rs
