[package]
name = "tsea28-computer"
version = "0.1.0"
edition = "2021"

[profile.dev]
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.22.0", features = ["all-widgets"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-big-array = "0.5.1"
toml = "0.7.6"
